# snippets

./: .gitignore  CMakeLists.txt  main.cpp  ring_buffer.c  ring_buffer.h  ring_buffer_test.cpp
